[package]
name = "hllvm"
version = "0.1.3"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "Idiomatic bindings to the LLVM compiler suite"
license = "MIT"
documentation = "http://dylanmckay.io/hllvm/hllvm"
repository = "https://github.com/dylanmckay/hllvm"
readme = "README.md"

keywords = ["llvm", "compiler", "machinecode", "assembly"]

[workspace]

[dependencies]
hllvm-sys = { version = "0.1.3", path = "src/sys" }
lazy_static = "0.1"
libc = "0.2"
