[package]
name = "hllvm-sys"
version = "0.1.2"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "FFI wrapper around the LLVM C++ library"
license = "MIT"
documentation = "https://docs.rs/hllvm-sys"
repository = "https://github.com/dylanmckay/hllvm"

keywords = ["llvm", "compiler"]

build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"
ncurses = "5.84" # Required to link LLVM
cpp = { version = "0.1.0", features = ["macro"] }

[build-dependencies]
cpp = { version = "0.1.0", features = ["build"] }
