[package]
name = "hllvm-sys"
version = "0.1.3"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "FFI wrapper around the LLVM C++ library"
license = "MIT"
documentation = "http://dylanmckay.io/hllvm/hllvm"
repository = "https://github.com/dylanmckay/hllvm"

keywords = ["llvm", "compiler", "machinecode", "assembly"]

build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"
ncurses = "5.84" # Required to link LLVM
libffi-sys = "0.5.2" # Required to link LLVM
cpp = { version = "0.1.0", features = ["macro"] }

[build-dependencies]
cpp = { version = "0.1.0", features = ["build"] }
